Support neo4j 3.3.0 with Java 8