@@ -23,12 +23,12 @@
 	<build>
 		<plugins>
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.1</version>
-                <configuration>
-                    <release>11</release>
-                </configuration>
+                <version>2.3.2</version>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+				</configuration>
             </plugin>
 			<plugin>
 	            <groupId>org.apache.maven.plugins</groupId>
@@ -60,10 +60,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.22.2</version>
-                <configuration>
-                    <argLine>--illegal-access=permit</argLine>
-                </configuration>
+                <version>2.20</version>
             </plugin>
             <plugin>
                 <groupId>org.jacoco</groupId>
